--- a/BOT/Code/package.json
+++ b/BOT/Code/package.json
@@ -1,20 +1,22 @@
 {
   "name": "whatbot",
   "version": "1.0.0",
-  "keywords": ["bot","whatbot","csc510","Nirav Dsouza","Calvin Fernando","Sharmn Lalani", "Ronald Joseph","Bharat Mukheja"],
+  "keywords": [
+    "bot",
+    "whatbot",
+    "csc510",
+    "Nirav Dsouza",
+    "Calvin Fernando",
+    "Sharmn Lalani",
+    "Ronald Joseph",
+    "Bharat Mukheja"
+  ],
   "url": "https://github.ncsu.edu/nedsouza/CSC510-Project/",
   "private": true,
   "description": "Slack Agile Bot",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "author": "Nirav Dsouza <nedsouza@ncsu.edu>",
-  "license": "BSD-3-Clause",
-  "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0"
+    "start": "node main.js"
   },
   "dependencies": {
     "@slack/client": "^3.9.0",
@@ -26,6 +28,8 @@
     "express": "^4.16.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.map": "^4.6.0",
-    "normalize-port": "^1.0.0"
+    "normalize-port": "^1.0.0",
+    "botkit": "^0.5.8",
+    "slackbots": "^0.5.1"
   }
 }
