--- a/BOT/Code/package.json
+++ b/BOT/Code/package.json
@@ -37,6 +37,6 @@
     "lodash.map": "^4.6.0",
     "normalize-port": "^1.0.0",
     "node-cron": "^1.2.1",
-    "sleep": "^5.1.1"
+    "node-schedule": "^1.2.5"
   }
 }
