--- a/BOT/Code/package.json
+++ b/BOT/Code/package.json
@@ -18,12 +18,21 @@
   "scripts": {
     "start": "node index.js"
   },
+  "author": "Nirav Dsouza <nedsouza@ncsu.edu>",
+  "license": "BSD-3-Clause",
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0"
+  },
   "dependencies": {
     "@slack/client": "^3.14.1",
     "@slack/events-api": "^1.0.1",
     "@slack/interactive-messages": "^0.2.0",
     "axios": "^0.16.2",
     "body-parser": "^1.18.2",
+    "botkit": "^0.6.4",
+    "delay": "^2.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "lodash.clonedeep": "^4.5.0",
