--- a/BOT/Code/package.json
+++ b/BOT/Code/package.json
@@ -39,6 +39,10 @@
     "lodash.map": "^4.6.0",
     "node-cron": "^1.2.1",
     "node-schedule": "^1.2.5",
-    "normalize-port": "^1.0.0"
+    "normalize-port": "^1.0.0",
+    "https": "^1.0.0",
+    "nock": "^0.34.1",
+    "nodemailer": "^4.3.1",
+    "request": "^2.83.0"
   }
 }
