--- a/SERVICE/Code/package.json
+++ b/SERVICE/Code/package.json
@@ -24,16 +24,19 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
-    "dotenv": "^4.0.0",
     "botkit": "^0.6.4",
+    "chrono-node": "^1.3.5",
     "delay": "^2.0.0",
+    "dotenv": "^4.0.0",
+    "generate-schema": "^2.5.1",
+    "google-auth-library": "*",
+    "googleapis": "*",
+    "jsonschema": "^1.2.0",
+    "nock": "^0.34.1",
     "node-cron": "^1.2.1",
     "node-schedule": "^1.2.5",
-    "nock": "^0.34.1",
     "nodemailer": "^4.3.1",
-    "chrono-node": "^5.4.2"
     "request": "^2.83.0",
-    "googleapis":"*",
-    "google-auth-library":"*"
+    "jsonschema": "^1.2.0",
   }
 }
