--- a/DEPLOY/Code/package.json
+++ b/DEPLOY/Code/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
+    "ajv": "^5.5.0",
     "botkit": "^0.6.4",
     "chrono-node": "^1.3.5",
     "delay": "^2.0.0",
